# cpp17

./: .gitignore
examples/strategy/: CMakeLists.txt
examples/strategy/data/: input.txt  output.txt
examples/strategy/include/: control.hpp  input_output.hpp  problem_interface.hpp  solver.hpp
examples/strategy/src/: control.cpp  input_output.cpp  main.cpp  problem_interface.cpp  solver.cpp
